@@ -10,3 +10,4 @@ Changes since 2010-12-01
 Changes since 2011-01-01
 
 * Ability to get rendered element size
+* Ability to get CSS Value on a webelement
